fixed some of the text alignment in the code.

--- a/about.html
+++ b/about.html
@@ -18,13 +18,21 @@
     <li><a href="resume.html">Resume </a></li>
     <li><a href="contact.html">Contact Info</a></li>
 </ul>
-<h3> Education:</h3>
-<h3> Thomas A Edison high school</h3>
+    <br>
+    <br>
+    <br>
+    <center>
+<div class="aboutme">
+<h3 > Education:</h3>
+<h3 > <a href="https://www.taehs.org/" class="about">Thomas A Edison High School</a></h3>
     <br>
 <h3> Experience in:</h3>
 <h3> HTML, CSS, Javascipt</h3>
     <br>
-<p>I'm a high school student intrested in web design. I'm creative and a great teamworker. I love to travel and I aspire to attain a career that would allow me to do so.</p>
+    <h3> About Me:</h3>
+<center>
+<p>I'm a high school student in nyc interested in web design. I'm creative, a good listener, open-minded, and a great team worker. I love to travel and I aspire to attain a career that would allow me to do so.</p> </center>
+</div></center>
      <script src="https://replit.com/public/js/replit-badge.js" theme="blue" defer></script> 
 </body>
 </html>
