--- a/work.html
+++ b/work.html
@@ -18,7 +18,20 @@
     <li><a href="resume.html">Resume </a></li>
     <li><a href="contact.html">Contact Info</a></li>
 </ul>
+ <a href="https://popcode.org/?snapshot=cd25919b-e649-45ce-8661-99b8b76e08b4"><img src="game.png" alt="project" class="imgs"></a>
+        <a href="https://popcode.org/?snapshot=9ce1e625-a830-4270-9b46-7850335b07c5"><img src="spongebob.png" alt="project" class="imgs"></a>
+        <a href="https://replit.com/@JUSTINARCHER2/Layout-and-Position-Project#index.html"><img src="lebron.png" alt="project" class="imgs"></a>
+<a href="https://popcode.org/?snapshot=cdb9baa2-53de-4c41-a1f8-15f3ead20c15"><img src="mountain.png" alt="project" class="imgs"></a>
+<a href="https://popcode.org/?snapshot=c9e519de-1848-4dec-a61e-bb2283ab312e"><img src="ny.png" alt="project" class="imgs"></a>
+<a href="https://popcode.org/?snapshot=6b9f1b67-53c6-4143-a803-7eb6c735920c"><img src="quiz.png" alt="project" class="imgs"></a>
+<a href="https://popcode.org/?snapshot=fc96bacf-7450-47df-aabd-66bcd8076c15"><img src="donut.png" alt="project" class="imgs"></a>
+<a href="https://popcode.org/?snapshot=f9b8bcdb-2f70-4989-afa9-fe49e86c680a"><img src="mole.png" alt="project" class="imgs"></a>
+    <a href="https://popcode.org/?snapshot=14643dd4-4c13-43e8-a6f1-a0ee11061c50"><img src="dogs.png" alt="project" class="imgs"></a>
 
+    <br>
+    <center>
+    <p > If you would like to see more here is my 10th grade portfolio showing all of my work from that year: <a href="https://Portfolio.lisettedela.repl.co" class="work">https://Portfolio.lisettedela.repl.co</a></p> </center>
+    <br>
      <script src="https://replit.com/public/js/replit-badge.js" theme="blue" defer></script> 
 </body>
 </html>
