--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
     <br>
     <h3> ldel2376@taehs.org</h3><br>
     <h3>  lisetted05@icloud.com </h3><br>
-     <h3>  Linkdon: <a href="https://www.linkedin.com/in/lisette-de-la-cruz" class="links">https://www.linkedin.com/in/lisette-de-la-cruz</a> </h3>
+     <h3>  Linkedin: <a href="https://www.linkedin.com/in/lisette-de-la-cruz" class="links">https://www.linkedin.com/in/lisette-de-la-cruz</a> </h3>
     <img src="linkdon.png" class="linkpic"><br>
     <h3>  Replit: <a href="//replit.com/@LISETTEDELA" class="links">https://replit.com/@LISETTEDELA</a></h3>
     <img src="rep.png" class="linkpic">
