--- a/resume.html
+++ b/resume.html
@@ -18,7 +18,7 @@
     <li><a href="resume.html">Resume </a></li>
     <li><a href="contact.html">Contact Info</a></li>
 </ul>
-<img src="resume.png" alt="resume" class="resume">
+<img src="resume.jpg" alt="resume" class="resume">
 
      <script src="https://replit.com/public/js/replit-badge.js" theme="blue" defer></script> 
 </body>
